<resources>
    <string name="app_name">MedicationTracker</string>
    <string name="medication_name_hint">Medication Name</string>
    <string name="dosage_hint">Dosage</string>
    <string name="frequency_hint">Enter frequency (dd:hh:mm)</string>
    <string name="pick_date">Pick Date</string>
    <string name="pick_time">Pick Time</string>
    <string name="submit">Submit</string>
    <string name="medication_name">Medication Name</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="add_medication">Add Medication</string>
    <string name="medication_dosage">Dosage</string>
    <string name="back">Back</string>
    <string name="channel_name">Medication Reminders</string>
    <string name="channel_description">Notification channel for medication reminders</string>
</resources>